force-app/main/default/objects/Claim__c/fields/Sum_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Payments__c</fullName>
    <label>Sum of Payments</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Bank fees</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Legal Fees</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Patient Refund</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Client Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>