force-app/main/default/objects/Claim__c/fields/To_DOS__c.field-meta.xml
<CustomField>
    <fullName>To_DOS__c</fullName>
    <description>The to date of service</description>
    <inlineHelpText>Discharge Date</inlineHelpText>
    <label>To DOS</label>
    <required>true</required>
    <type>Date</type>
</CustomField>