force-app/main/default/objects/Claim__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <description>total amount received for write off type - Insurance Payment, Patient payment, Patient down payment nf, Patient down payment wf.</description>
    <label>Total Amount Paid</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Insurance Payment, Patient Payment, Patient down payment WF, Patient down payment NF</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>