force-app/main/default/objects/Claim__c/fields/Total_Amount_Unpaid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Unpaid__c</fullName>
    <formula>Total_Charge__c -  Total_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Unpaid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>