force-app/main/default/objects/Claim__c/fields/Total_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge__c</fullName>
    <description>The total amount of the claim</description>
    <formula>Facility_Charges__c + Professional_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**Note: This is an Auto-generated formula driven field.</inlineHelpText>
    <label>Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>