force-app/main/default/objects/Claim__c/fields/Total_Charges_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges_del__c</fullName>
    <description>Old total amount of the claim</description>
    <inlineHelpText>** Note: This field is NOT longer in use since 2014. DO NOT USE</inlineHelpText>
    <label>Old Total Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>