force-app/main/default/objects/Claim__c/fields/Total_Collected_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Collected_Amount__c</fullName>
    <description>It will show the amount collected from the patient.</description>
    <label>Total Collected Amount</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Insurance Payment, Patient Payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>