force-app/main/default/objects/Claim__c/fields/Total_Earned_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Fees__c</fullName>
    <label>Total Earned Fees</label>
    <summarizedField>Claim_Payment__c.Earned_fee_workflow__c</summarizedField>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>