force-app/main/default/objects/Claim__c/fields/Total_Earned_Fees_Display__c.field-meta.xml
<CustomField>
    <fullName>Total_Earned_Fees_Display__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Earned Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>