force-app/main/default/objects/Claim__c/fields/Total_Legal_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Legal_Fees__c</fullName>
    <description>Summary field to show the sum of legal fees.</description>
    <label>Total Legal Fees</label>
    <summarizedField>Claim_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Claim_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Legal Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>