force-app/main/default/objects/Claim__c/fields/Total_Paid_Earn_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Earn_Fees__c</fullName>
    <label>Total Paid Earn Fees</label>
    <summarizedField>Claim_Payment__c.Paid_Earn_Fees__c</summarizedField>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>