force-app/main/default/objects/Claim__c/fields/Total_paid_to_date_to_client__c.field-meta.xml
<CustomField>
    <fullName>Total_paid_to_date_to_client__c</fullName>
    <label>Total paid to date to client.</label>
    <summarizedField>Claim_Payment__c.Paid_to_client__c</summarizedField>
    <summaryForeignKey>Claim_Payment__c.Claim_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>