force-app/main/default/objects/Claim__c/validationRules/Projected_Payment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Projected_Payment_Date</fullName>
    <active>true</active>
    <description>Projected Payment Date should be greater than today</description>
    <errorConditionFormula>Projected_Payment_Date__c  &lt;=  TODAY()</errorConditionFormula>
    <errorMessage>Projected Payment Date should be greater than today</errorMessage>
</ValidationRule>