force-app/main/default/objects/Claim__c/listViews/All_Claims.listView-meta.xml
<ListView>
    <fullName>All_Claims</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Medical_Provider__c</columns>
    <columns>Insurance_Company__c</columns>
    <columns>From_DOS__c</columns>
    <columns>To_DOS__c</columns>
    <columns>Pending_Status__c</columns>
    <columns>Total_Charge__c</columns>
    <columns>Claim_Balance_del__c</columns>
    <columns>Collector__c</columns>
    <columns>Case__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Claims</label>
</ListView>