force-app/main/default/objects/Claim__c/listViews/Blue_Net_Claims.listView-meta.xml
<ListView>
    <fullName>Blue_Net_Claims</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Medical_Provider__c</columns>
    <columns>From_DOS__c</columns>
    <columns>To_DOS__c</columns>
    <columns>Total_Charge__c</columns>
    <columns>Pending_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medical_Provider__c</field>
        <operation>equals</operation>
        <value>Blue Net Hospitals</value>
    </filters>
    <label>Blue Net Claims</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>