force-app/main/default/objects/Claim__c/listViews/CMC_Claims.listView-meta.xml
<ListView>
    <fullName>CMC_Claims</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Medical_Provider__c</columns>
    <columns>From_DOS__c</columns>
    <columns>To_DOS__c</columns>
    <columns>Total_Charge__c</columns>
    <columns>Pending_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medical_Provider__c</field>
        <operation>equals</operation>
        <value>CMC Costamed Mahahual</value>
    </filters>
    <filters>
        <field>Medical_Provider__c</field>
        <operation>equals</operation>
        <value>CMC Costamed-Cozumel</value>
    </filters>
    <filters>
        <field>Medical_Provider__c</field>
        <operation>equals</operation>
        <value>CMC Costamed-Playa Del Carmen</value>
    </filters>
    <filters>
        <field>Medical_Provider__c</field>
        <operation>equals</operation>
        <value>CMC Costamed-Puerto Morelos</value>
    </filters>
    <label>CMC Claims</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>